viz infra and endpoints
