# go/model_create_visualization_request.go
@@ -1,0 +1,35 @@
+/*
+ * Datamonkey API
+ *
+ * Datamonkey is a free public server for comparative analysis of sequence alignments using state-of-the-art statistical models. <br> This is the OpenAPI definition for the Datamonkey API.
+ *
+ * API version: 1.2.0
+ * Contact: spond@temple.edu
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package datamonkey
+
+type CreateVisualizationRequest struct {
+
+	// Job ID to associate with this visualization
+	JobId string `json:"job_id"`
+
+	// Dataset ID to associate with this visualization (optional)
+	DatasetId string `json:"dataset_id,omitempty"`
+
+	// Title of the visualization
+	Title string `json:"title"`
+
+	// Description of what the visualization shows
+	Description string `json:"description,omitempty"`
+
+	// The Vega-Lite visualization specification
+	Spec map[string]interface{} `json:"spec"`
+
+	// Additional configuration options
+	Config map[string]interface{} `json:"config,omitempty"`
+
+	// Additional metadata about the visualization
+	Metadata map[string]interface{} `json:"metadata,omitempty"`
+}
