# go/model_update_visualization_request.go
@@ -1,0 +1,29 @@
+/*
+ * Datamonkey API
+ *
+ * Datamonkey is a free public server for comparative analysis of sequence alignments using state-of-the-art statistical models. <br> This is the OpenAPI definition for the Datamonkey API.
+ *
+ * API version: 1.2.0
+ * Contact: spond@temple.edu
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package datamonkey
+
+type UpdateVisualizationRequest struct {
+
+	// Updated title of the visualization
+	Title string `json:"title,omitempty"`
+
+	// Updated description
+	Description string `json:"description,omitempty"`
+
+	// Updated Vega-Lite visualization specification
+	Spec map[string]interface{} `json:"spec,omitempty"`
+
+	// Updated configuration options
+	Config map[string]interface{} `json:"config,omitempty"`
+
+	// Updated metadata
+	Metadata map[string]interface{} `json:"metadata,omitempty"`
+}
