# go/model_visualization_metadata.go
@@ -1,0 +1,24 @@
+/*
+ * Datamonkey API
+ *
+ * Datamonkey is a free public server for comparative analysis of sequence alignments using state-of-the-art statistical models. <br> This is the OpenAPI definition for the Datamonkey API.
+ *
+ * API version: 1.2.0
+ * Contact: spond@temple.edu
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package datamonkey
+
+// VisualizationMetadata - Additional metadata about the visualization
+type VisualizationMetadata struct {
+
+	// Visualization library used
+	Library string `json:"library,omitempty"`
+
+	// Tool or method that generated this visualization
+	GeneratedBy string `json:"generated_by,omitempty"`
+
+	// Original prompt used to generate the visualization
+	Prompt string `json:"prompt,omitempty"`
+}
