# go/model_visualizations.go
@@ -1,0 +1,15 @@
+/*
+ * Datamonkey API
+ *
+ * Datamonkey is a free public server for comparative analysis of sequence alignments using state-of-the-art statistical models. <br> This is the OpenAPI definition for the Datamonkey API.
+ *
+ * API version: 1.2.0
+ * Contact: spond@temple.edu
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package datamonkey
+
+type Visualizations struct {
+	Visualizations []Visualization `json:"visualizations,omitempty"`
+}
